--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MyMedicalBot | David Yonwook Chung</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>MMB Code Challenge | David Yonwook Chung</title>
 </head>
+
 <body>
-    <div id="app"></div>
-    <script src="bundle.js"></script>
+  <div id="app"></div>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
